[package]
name = "solanacdn-protocol"
version = "0.1.8"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/pipenetwork/solanacdn-protocol"
description = "Minimal wire protocol + framing for SolanaCDN ↔ Agave integration"
readme = "README.md"

[dependencies]
bs58 = "0.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.8.5"
raptorq = "1.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
bincode = { version = "1.3.3", optional = true }

[features]
default = []
ledger-memos = ["dep:bincode"]

[workspace]
